--- a/index.html
+++ b/index.html
@@ -8,19 +8,24 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
+    <p id="top"></p>
     <header id="header">
-        <img src="/images/white-01.png" alt="white v logo" id="header-img">
+        <img src="/images/white.png" class="nav-link" alt="white v logo" id="header-img">
         <nav id="nav-bar">
             <ul>
-                <li><a href="" class="nav-link">New Collection</a></li>
-                <li><a href="" class="nav-link">Home</a></li>
-                <li><a href="" class="nav-link">Contact us</a></li>
+                <li><a href="#video" class="nav-link">New Collection</a></li>
+                <li><a href="#top" class="nav-link">Home</a></li>
+                <li><a href="#email" class="nav-link">Contact us</a></li>
             </ul>
         </nav>
     </header>
+    <h1 id="slogan">The clothes you deserve not just need</h1>
+    <h2>We use the finest materials known to mankind</h2>
+    <h1>Our new collection</h1><br>
     <iframe id="video" width="900" height="506" src="https://www.youtube.com/embed/0rt4AQFF0Ng" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <h1>Contact us</h1>
     <form action="https://www.freecodecamp.com/email-submit" id="form">
-        <input id="email" type="email" name="email-inputted" placeholder="Enter your email address">
+        <input id="email" type="email" name="email" placeholder="Enter your email address">
         <input type="submit" name="" id="submit">
     </form>
 </body>
